# django-template

./: README.md  pyproject.toml  pytest.ini
config/: asgi.py  settings.py  urls.py  wsgi.py
core/: tests.py
