[tool.poetry]
name = "{{ project_name }}"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
django = "^4.1.2"
environs = "^9.5.0"


[tool.poetry.group.dev.dependencies]
django-stubs = "^1.13.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
